add a easy login system, after register, user can see their information after login

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -6,7 +6,7 @@
         <table>
             <tr>
                 <td>Matrikel Number:</td>
-                <td><input type="number" name="matrikel"/></td>
+                <td><input type="text" name="matrikel"/></td>
             </tr>
             <tr>
                 <td>First Name:</td>
