--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,28 +1,23 @@
-@(message: String)
+@(signupForm: Form[Application.Register], loginForm: Form[Application.Login])
 
-@main("HMS-System") {
+@scripts = {
+    <script src="@routes.Assets.at("javascripts/password.js")" type="text/javascript"></script>
+}
 
-    <form action="@routes.Application.addUser()" method="post">
-        <table>
-            <tr>
-                <td>Matrikel Number:</td>
-                <td><input type="text" name="matrikel"/></td>
-            </tr>
-            <tr>
-                <td>First Name:</td>
-                <td><input type="text" name="firstname"/></td>
-            </tr>
-            <tr>
-                <td>Last Name:</td>
-                <td><input type = "text" name="lastname"/></td>
-            </tr>
-            <tr>
-               <td><button>Submit</button></td>
-            </tr>
+@main(null, scripts) {
 
-        </table>
-    </form>
+  @wflash()
+  <div class="col-lg-6">
+      HMS System For Testing
+  </div>
 
+  <div class="col-lg-6">
+    <div class="well">
+      @login(loginForm)
+    </div>
 
-
+    <div class="well">
+      @account.signup.createFormOnly(signupForm)
+    </div>
+  </div>
 }
