add creation time

--- a/app/views/dashboard/index.scala.html
+++ b/app/views/dashboard/index.scala.html
@@ -6,5 +6,6 @@
     <ul>
         <li>Matrikel Number: @user.id</li>
         <li>Lastname: @user.getFirstname</li>
+        <li>User created on: @user.dateCreation</li>
     </ul>
 }
