--- a/app/views/forbidden.scala.html
+++ b/app/views/forbidden.scala.html
@@ -7,6 +7,7 @@ Your are not allowed to see this site
 <ul>
     <li>Matrikel Number: @user.id</li>
     <li>Lastname: @user.getFirstname</li>
+    <li>User created on: @user.dateCreation</li>
 </ul>
 
     this site is only for user to use
