--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,10 +1,8 @@
 @(signupForm: Form[Application.Register], loginForm: Form[Application.Login])
 
-@scripts = {
-    <script src="@routes.Assets.at("javascripts/password.js")" type="text/javascript"></script>
-}
 
-@main(null, scripts) {
+
+@main(null) {
 
   @wflash()
   <div class="col-lg-6">
