login and registration system modification with bootstrap

--- a/app/views/account/reset/reset.scala.html
+++ b/app/views/account/reset/reset.scala.html
@@ -9,7 +9,7 @@
         <script src="@routes.Assets.at("javascripts/password.js")" type="text/javascript"></script>
     }
 
-@main(null) {
+@main(null,null) {
 
     <h3>@Messages("signup.reset.password")</h3>
 
