--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(user: User = null)(content: Html)
+@(user: User = null,loginForm: Form[Application.Login])(content: Html)
 
 <!DOCTYPE html>
 
@@ -15,8 +15,8 @@
     </head>
     <body>
 
-       <div class="navbar navbar-inverse navbar-default" role="navigation">
-
+       <nav class="navbar navbar-inverse navbar-fixed-top">
+<div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
                     <span class="sr-only">Toggle navigation</span>
@@ -26,15 +26,20 @@
                     <i class="fa fa-rocket"></i> HMS System
                 </a>
                 <ul class="nav navbar-nav navbar-right">
-                    <li class=""><a href="@routes.Application.index()">Home</a></li>
+                    <li class=""><a href="@routes.Application.index()">About</a></li>
                 </ul>
             </div>
+            @login(loginForm)
             @logged(user)
-        </div>
+</div>
+        </nav>
 
         <div class="container">
             <div class="row">
-               @content
+
+                <div class="col-md-4 col-md-offset-11">@content</div>
+
+
             </div>
         </div>
 
