--- a/app/views/loginInput.scala.html
+++ b/app/views/loginInput.scala.html
@@ -1,7 +1,6 @@
 @(elements: helper.FieldElements)
 
-<div class="navbar-form navbar-right @if(elements.hasErrors) {error}">
     <div class="form-group">
-        <div class="form-group">@elements.input</div>
+        @elements.input
     </div>
-</div>
+
