--- a/app/views/account/signup/create.scala.html
+++ b/app/views/account/signup/create.scala.html
@@ -2,14 +2,14 @@
 
 
 
-@main(null,null) {
+@main(null) {
     <div class="span3">
             &nbsp;
     </div>
 
     <div class="span12">
         <div class="well">
-        @createFormOnly(signupForm)
+        @createFormOnly()
 
         </div>
     </div>
