--- a/app/views/account/signup/createFormOnly.scala.html
+++ b/app/views/account/signup/createFormOnly.scala.html
@@ -1,52 +1,53 @@
-@(signupForm: Form[Application.Register])
-
-@import helper._
-    @implicitFieldConstructor = @{
-        FieldConstructor(twitterBootstrapInput.render)
-    }
 
 <h3>@Messages("signup.new")</h3>
 
-@form(controllers.account.routes.Signup.save()) {
-
-    <fieldset>
-        @inputText(
-            signupForm("id"),
-            'placeholder -> Messages("Only for Students"),
-            '_label -> Messages("signup.label.matrikel"),
-            'class -> "form-control"
-
-        )
-        @inputText(
-            signupForm("email"),
-            'placeholder -> Messages("Required"),
-            '_label -> Messages("signup.label.email"),
-            'class -> "form-control"
-        )
-        @inputText(
-            signupForm("lastname"),
-            'placeholder -> Messages("Required"),
-            '_label -> Messages("signup.label.lastname"),
-            'class -> "form-control"
-        )
-        @inputText(
-            signupForm("firstname"),
-            'placeholder -> Messages("Required"),
-            '_label -> Messages("signup.label.firstname"),
-            'class -> "form-control"
-        )
-        @inputPassword(
-            signupForm("inputPassword"),
-            '_label -> Messages("signup.label.password"),
-            'placeholder -> Messages("Required"),
-            'class -> "form-control"
-        )
-    </fieldset>
-
+<form class="form-horizontal" action="@controllers.account.routes.Signup.save()">
     <div class="form-group">
-        <div class="col-sm-offset-9 col-sm-3">
-        <input type="submit" class="btn btn-primary" value="@Messages("signup.signup")"></div>
+        <label for="matrikel" class="col-sm-2 control-label">@Messages("signup.label.matrikel")</label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" name="id" placeholder="@Messages("signup.holder.student")">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="email" class="col-sm-2 control-label">@Messages("signup.label.email")</label>
+        <div class="col-sm-10">
+            <input type="email" class="form-control" name="email" placeholder="@Messages("signup.holder.requried")">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="lastname" class="col-sm-2 control-label">@Messages("signup.label.lastname")</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" name="lastname" placeholder="@Messages("signup.holder.requried")">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="firstname" class="col-sm-2 control-label">@Messages("signup.label.firstname")</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" name="firstname" placeholder="@Messages("signup.holder.requried")">
+        </div>
     </div>
 
-}
+    <div class="form-group">
+        <label for="password" class="col-sm-2 control-label">@Messages("signup.label.password")</label>
+        <div class="col-sm-10">
+            <input type="password" class="form-control" name="inputPassword" placeholder="@Messages("signup.holder.requried")">
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox"> Remember me
+                </label>
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-default">@Messages("signup.signup")</button>
+        </div>
+    </div>
+</form>
+
+
 
