--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(user: User = null,loginForm: Form[Application.Login])(content: Html)
+@(user: User = null)(content: Html)
 
 <!DOCTYPE html>
 
@@ -27,9 +27,9 @@
                 </a>
                 </div>
     <div class="navbar-collapse collapse">
-        <form class="navbar-form navbar-right">
-    @login(loginForm)
-            </form>
+        <div class="navbar-form navbar-right">
+@*//    @login(loginForm)*@
+            </div>
     </div>
             </div>
             @logged(user)
@@ -37,8 +37,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-md-4 col-md-offset-11">@content</div>
-
+               @content
             </div>
         </div>
 
