--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,33 +1,15 @@
-@(loginForm: Form[Application.Login])
-@import helper._
-@implicitFieldConstructor = @{
-    FieldConstructor(loginInput.render)
-}
-@if(loginForm != null) {
-    @form(routes.Application.authenticate()) {
-
-        @if(loginForm.hasGlobalErrors) {
-            <p class="error">
-                <span class="label label-danger">@loginForm.globalError.message</span>
-            </p>
-        }
-        <form>
-            @inputText(
-                loginForm("email"),
-                'placeholder -> Messages("email"),
-                'class -> "form-control"
-            )
-            @inputPassword(
-                loginForm("password"),
-                'placeholder -> Messages("password"),
-                'class -> "form-control"
-            )
-
-            <button type="submit" class="btn btn-success">@Messages("signin.signin")</button>
-            <small><a href="@controllers.account.routes.Reset.ask">@Messages("forgot.password")</a></small>
-        </form>
-
-
-
-    }
-}
+ <form class="form-inline" action="@routes.Application.authenticate()" method="post">
+        <div class="form-group">
+            <input type="email" class="form-control" id="exampleInputEmail3"  name="email" placeholder="@Messages("email")">
+        </div>
+        <div class="form-group">
+            <input type="password" class="form-control" id="exampleInputPassword3" name="password" placeholder="@Messages("password")">
+        </div>
+        <div class="checkbox">
+            <label>
+                <input type="checkbox"> @Messages("signin.remember")
+            </label>
+        </div>
+        <button type="submit" class="btn btn-success">@Messages("signin.signin")</button>
+        <small><a href="@controllers.account.routes.Reset.ask">@Messages("forgot.password")</a></small>
+    </form>
