--- a/app/views/dashboard/index.scala.html
+++ b/app/views/dashboard/index.scala.html
@@ -1,11 +1,12 @@
 @(user: User)
 
 @main(user) {
-
+<div class="container">
     Logged in User
     <ul>
         <li>Matrikel Number: @user.id</li>
         <li>Lastname: @user.getFirstname</li>
         <li>User created on: @user.dateCreation</li>
     </ul>
+</div>
 }
