--- a/app/views/forbidden.scala.html
+++ b/app/views/forbidden.scala.html
@@ -1,7 +1,7 @@
 @(user: User)
 
 @main(user) {
-
+    <div class="container">
 Your are not allowed to see this site
     <br>User:
 <ul>
@@ -11,4 +11,5 @@ Your are not allowed to see this site
 </ul>
 
     this site is only for user to use
+    </div>
 }
