--- a/app/views/account/reset/reset.scala.html
+++ b/app/views/account/reset/reset.scala.html
@@ -1,43 +1,38 @@
 @(resetForm: Form[controllers.account.Reset.ResetForm], token: String)
 
-@import helper._
-    @implicitFieldConstructor = @{
-        FieldConstructor(twitterBootstrapInput.render)
-    }
-
-    @scripts = {
-        <script src="@routes.Assets.at("javascripts/password.js")" type="text/javascript"></script>
-    }
-
 @main(null) {
-
-    <h3>@Messages("signup.reset.password")</h3>
-
-    @wflash()
-
-    <div class="col col-lg-8">
-        @Messages("resetpassword.new.password")
-
-        @form(controllers.account.routes.Reset.runReset(token)) {
-
-            <div class="form-group">
-                @inputPassword(
-                    resetForm("inputPassword"),
-                    'placeholder -> Messages("password"),
-                    '_label -> null,
-                    'class -> "form-control"
-                )
-                <h6>@Messages("signup.generate.password")</h6>
-                <input type="text" name="passwordGenerated" class="form-control">
-
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                @wflash()
+                <h3>@Messages("signup.reset.password")</h3>
+                <form class="form-horizontal" ng-app="password" ng-controller="passwordformcheck" action="@controllers.account.routes.Reset.runReset(token)" method="post">
+                    <div class="form-group">
+                        <div class="col-sm-6">
+                            <input type="password" class="form-control" id="password1" name = "inputPassword" ng-model="password1" placeholder="@Messages("resetpassword.new.password")">
+                        </div>
+                    </div>
+                    <div class="form-group" ng-class="{'has-success':isValid(password1,password2),'has-feedback':true,'has-error':!isValid(password1,password2)}">
+                        <div class="col-sm-6">
+                            <input type="password" class="form-control" id="password2" ng-model="password2" placeholder="@Messages("signup.label.passwordagain")">
+                            <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true" ng-show="!isValid(password1,password2)"></span>
+                            <span id="inputError2Status" ng-show="!isValid(password1,password2)" class="sr-only">
+                                (error)</span>
+                            <span class="glyphicon glyphicon-ok form-control-feedback" aria-hidden="true" ng-show="isValid(password1,password2)"></span>
+                            <span id="inputSuccess2Status" ng-show="isValid(password1,password2)" class="sr-only">
+                                (success)</span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-10">
+                            <input type="submit" class="btn btn-primary" ng-disabled="!isValid(password1,password2)" value="@Messages("validate")">
+                            <a href="@routes.Application.index" class="btn btn-default">@Messages("goback")</a>
+                        </div>
+                    </div>
+                </form>
             </div>
 
-            <hr>
-
-            <input type="submit" class="btn btn-primary" value="@Messages("validate")">
-            <a href="@routes.Application.index" class="btn btn-default">@Messages("goback")</a>
-
-        }
+        </div>
     </div>
 
 }
