--- a/app/views/account/reset/runAsk.scala.html
+++ b/app/views/account/reset/runAsk.scala.html
@@ -5,7 +5,9 @@
 
 
 @main(null) {
-
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
     <h3>@Messages("resetpassword")</h3>
 
     @wflash()
@@ -14,5 +16,7 @@
     <div class="form-actions">
         <a href="@routes.Application.index" class="btn btn-default">@Messages("goback")</a>
     </div>
-
+</div>
+    </div>
+    </div>
 }
