--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,5 +1,5 @@
 @(user: User = null)(content: Html)
-
+@import java.util.Date
 <!DOCTYPE html>
 
 <html>
@@ -7,46 +7,45 @@
         <title>@Messages("title")</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/background.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery/jquery-2.1.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/angular.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/password.js")" type="text/javascript"></script>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/font-awesome.min.css")">
     </head>
     <body>
 
-       <nav class="navbar navbar-inverse navbar-fixed-top">
-<div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="@routes.Application.index()">
-                    <i class="fa fa-rocket"></i> HMS System
-                </a>
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="@routes.Application.index()">
+                        <i class="fa fa-rocket"></i> HMS System
+                    </a>
                 </div>
-    <div class="navbar-collapse collapse">
-        <div class="navbar-form navbar-right">
-            @if(user == null){@login()}
-            </div>
-        @logged(user)
-    </div>
+                <div class="navbar-collapse collapse">
+                    <div class="navbar-form navbar-right">
+                    @if(user == null) {@login()}
+                    </div>
+                    @logged(user)
+                </div>
             </div>
 
         </nav>
 
-        <div class="container">
-            <div class="row">
-               @content
-            </div>
-        </div>
+
+            @content
+
 
         <hr>
         <div class="footer text-center">
             <div>
                 <small>
-
+@(new java.util.Date)
                 </small>
             </div>
         </div>
