--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -17,15 +17,20 @@
     <body>
 
         <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="@routes.Application.index()">
                         <i class="fa fa-rocket"></i> HMS System
                     </a>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class=""><a href="@routes.About.index()">@Messages("about")</a></li>
+                    </ul>
                 </div>
                 <div class="navbar-collapse collapse">
                     <div class="navbar-form navbar-right">
@@ -38,14 +43,14 @@
         </nav>
 
 
-            @content
+        @content
 
 
-        <hr>
+
         <div class="footer text-center">
             <div>
                 <small>
-@(new java.util.Date)
+                @(new java.util.Date)
                 </small>
             </div>
         </div>
