fix signup methode

--- a/app/views/account/signup/createFormOnly.scala.html
+++ b/app/views/account/signup/createFormOnly.scala.html
@@ -1,7 +1,7 @@
 
 <h3>@Messages("signup.new")</h3>
 
-<form class="form-horizontal" action="@controllers.account.routes.Signup.save()">
+<form class="form-horizontal" action="@controllers.account.routes.Signup.save()" method="post">
     <div class="form-group">
         <label for="matrikel" class="col-sm-2 control-label">@Messages("signup.label.matrikel")</label>
         <div class="col-sm-10">
