--- a/app/views/account/signup/created.scala.html
+++ b/app/views/account/signup/created.scala.html
@@ -1,5 +1,5 @@
 @main(null) {
-
+@*TODO: Use pop up window to show successfull*@
     <h3>@Messages("signup.successfull")</h3>
     @Messages("signup.msg.created")
 
