add permitall, somepage should should be seen for every logged user

--- a/app/views/account/signup/createFormOnly.scala.html
+++ b/app/views/account/signup/createFormOnly.scala.html
@@ -35,8 +35,8 @@
     </div>
 
     <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default">@Messages("signup.signup")</button>
+        <div class="col-sm-offset-10 col-sm-10">
+            <button type="submit" class="btn btn-primary">@Messages("signup.signup")</button>
         </div>
     </div>
 </form>
