--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -1,5 +1,6 @@
-@main(){
+@(user: User)
 
+@main(user){
   <div class="jumbotron vertical-center">
     <div class="container">
       <div class="page-header">
@@ -26,6 +27,4 @@
       </ul>
     </div>
   </div>
-
-
 }
