--- a/app/views/logged.scala.html
+++ b/app/views/logged.scala.html
@@ -3,7 +3,7 @@
 @if(user != null) {
     <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> @user.lastname,@user.firstname <b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="http://www.gravatar.com/avatar/@user.userHash" height="20" width="20"/>@user.lastname,@user.firstname <b class="caret"></b></a>
             <ul class="dropdown-menu">
                 <li><a href="@controllers.account.settings.routes.Index.index()"><i class="fa fa-wrench"></i> @Messages("settings")</a></li>
                 <li class="divider"></li>
