--- a/app/views/account/settings/index.scala.html
+++ b/app/views/account/settings/index.scala.html
@@ -40,15 +40,8 @@
                 </form>
             </div>
             <div class="tab-pane fade" id = "password">
-                <form>
-                    <div class="form-group">
-                        <label>@Messages("password")</label>
-                        <input type="password" class="form-control" placeholder="@Messages("password")">
-                    </div>
-                    <div class="form-group">
-                        <label>@Messages("email.new")</label>
-                        <input type="password" class="form-control"placeholder="@Messages("password.again")">
-                    </div>
+                <br>
+                <form action="@controllers.account.settings.routes.Password.runPassword()" method="post">
                     <button type="submit" class="btn btn-default">Reset</button>
                 </form>
             </div>
