add all available lectures and also add more rolls to permit function

--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -24,6 +24,7 @@
         <li><a href="http://bootsnipp.com/snippets/featured/login-amp-password-reminder">"Recover Password Form" from bootsnipp.com</a> was used in Recover Password
         </li>
         <li><a href="https://css-tricks.com/perfect-full-page-background-image/">Embeded Background Image</a></li>
+          <li><a href="http://stackoverflow.com/questions/12733238/retain-twitter-bootstrap-collapse-state-on-page-refresh-navigation">state unchange</a></li>
       </ul>
     </div>
   </div>
