--- a/app/views/account/signup/createFormOnly.scala.html
+++ b/app/views/account/signup/createFormOnly.scala.html
@@ -34,8 +34,8 @@
     </div>
 
     <div class="form-group">
-        <div class="col-sm-offset-10 col-sm-10">
-            <button type="submit" class="btn btn-primary">@Messages("signup.signup")</button>
+        <div class="col-sm-12">
+            <button type="submit" class="btn btn-primary pull-right">@Messages("signup.signup")</button>
         </div>
     </div>
 </form>
